--- a/VisualizeIt/app/views/budget/grid.html.erb
+++ b/VisualizeIt/app/views/budget/grid.html.erb
@@ -7,26 +7,16 @@
 <%= csrf_meta_tag %>
 </head>
 <body>
-OK, here is a breakdown of what you should save on a <b>weekly</b> basis<br>
-for each item that you entered a value for in the saving and budgeting part of the calculator.<br>
-<br>
-<% plan.each do |p| %>
-	$<%= p.classesBudget %>	<br>
-	$<%= p.vacBudget %>	<br>
-	$<%= p.socBudget %>	<br>
-	$<%= p.entertainBudget %><br>	
-	$<%= p.weddingBudget %>	<br>
-	$<%= p.gymBudget %>	<br>
-	$<%= p.hobbiesBudget %>	<br>
+<% flash.each do |key, msg| %>
+  <%= content_tag :div, msg, :id => key %>
 <% end %>
-<script type="text/javascript">
-console.log();
-</script>	
+<% puts "Plan is : #{@salary.inspect}, #{@expenses.inspect}, #{@budg.inspect}" %>	
+<%= debug "Plan is : #{@salary.inspect}, #{@expenses.inspect}, #{@budg.inspect}" %>	
+OK...<br>
+<%# @plan.each do |p| %>	
+	From a weekly salary of $<%= @salary %>, you must pay a minimum of 
+	$<%= @expenses %> in expenses, but you still need to save weekly 
+	$<%= @budg %> to achieve what you want annually.
+<%# end %>
 </body>
 </html>
-<!-- 
-Completed 500 Internal Server Error in 57ms
-
-ActionView::Template::Error (stack level too deep):
-  app/helpers/plan_helper.rb:3
-  -->
