Updated with working components Nov 015

--- a/GoofOffTimer/bg.css
+++ b/GoofOffTimer/bg.css
@@ -1,13 +1,8 @@
 body.popup			{
 	width:320px; height:450px;
 }
-ul.badSites			{
-	color: white;
+ul		{
 	background-color: #fee
-}
-ul.goodSites		{
-	color: white;
-	background-color: #eef
 }
 div.myBadSites		{
 	position: absolute;
