--- a/GoofOffTimer/bg.css
+++ b/GoofOffTimer/bg.css
@@ -9,6 +9,8 @@ div.myBadSites		{
 	width:150px; height:280px;
 	top:2%; left:2%;
 }
+.goodSitesList		{}
+.badSitesList		{}
 div.myGdSites		{
 	position: absolute;
 	width:150px; height:280px;
