--- a/front end javascript demo/cal.scss
+++ b/front end javascript demo/cal.scss
@@ -14,10 +14,11 @@
 	border: 1px solid #cccccc;
 	position: absolute;
 	resize: both;
+	overflow: auto;
 }
 .timeSpanMsg, .todo		{
 	width: 100%;
-	p		{
+	p, text		{
 		font-family: arial;
 		font-size: 0.3em;	// should scale 
 		text-anchor: middle;
@@ -49,10 +50,15 @@ textarea				{
 	width: 15%;
 	height: 15%;
 	display: inline-block;
-	padding-top: 1em;
-	padding-left: 1em;
-	padding-bottom: 1em;
-	padding-right: 1em;
+	padding-top: 0em;
+	padding-left: 0em;
+	padding-bottom: 0em;
+	padding-right: 0em;
+	text		{
+		font-family: arial;
+		font-size: 1.7em;
+		text-anchor: middle;
+	}
 }
 .calDay					{
 	display: inline;
@@ -67,6 +73,13 @@ textarea				{
 	text		{
 		font-family: arial;
 		font-size: 1.7em;
+		text-anchor: middle;
+	}
+}
+.intro, .about			{
+	text		{
+		font-family: arial;
+		font-size: 0.7em;
 		text-anchor: middle;
 	}
 }
